--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ p {
 
 section {
     margin: 1em 4em 2em
+    
 }
 h1, h2 {
     font-weight: 100px;
@@ -18,6 +19,10 @@ html {
     font-family:"Courier New", monospace;
 }
 
+body {
+    background-color: lightblue   
+}
+
 .fa {
     padding: 10px;
     font-size: 30px;
@@ -25,5 +30,21 @@ html {
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
+}
+  main {
+    color:cadetblue
   }
-  
+ a:link {
+    color: cadetblue 
+ }
+ a:hover {
+    color: darkslategrey 
+ }
+
+ a:visited {
+    color:darkcyan 
+ }
+
+ header {
+    color:cadetblue
+ }
