--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
     border-radius: 50%;
 }
   main {
+    display: grid;
+    grid-template-columns: 50% 50%;
     color:#003049;
   }
  a:link {
